test(lotto): 수익률을 정상적으로 구하는지 확인하는 테스트 코드 작성